Update remaining formio routes to include rebate year and form abbreviation in url
